<?xml version="1.0"?>
<package format="3">
  <name>onnxruntime-gpu</name>
  <version>0.1.0</version>
  <description>ONNX Runtime GPU backend plugin for deep_ros</description>
  <maintainer email="hello@watonomous.ca">WATonomous</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>deep_core</depend>
  <depend>deep_tensor</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>deep_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/plugins.xml" />
  </export>
</package>
