<?xml version="1.0"?>
<package format="3">
  <name>onnxruntime_gpu_vendor</name>
  <version>1.22.0</version>
  <description>Vendor package for ONNX Runtime (GPU/CUDA)</description>
  <maintainer email="hello@watonomous.ca">WATonomous</maintainer>
  <license>MIT</license>    <!-- ORT License -->
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
