<?xml version="1.0"?>
<package format="3">
  <name>camera_sync</name>
  <version>0.1.0</version>
  <description>ROS2 node for multi-camera synchronization</description>
  <maintainer email="lereljic@watonomous.ca">Lereljic</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>deep_msgs</depend>
  <depend>class_loader</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
